# WaveMind

./:  .gitattributes  .gitignore  README.md  Setup_Env.sh  pyproject.toml
.claude/doc/: architecture.md  bench.md  datasets.md  rag.md  training.md  wavemind-instruct.md
Data_Engineering/Script/WaveMind_Bench/: construct_WaveMind_bench.sh
EEGLLM/: Predict.py
EEGLLM/Evaluation/: Evaluation_Classification.py
EEGLLM/LLaVA/: pyproject.toml
EEGLLM/LLaVA/llava/: __init__.py  conversation.py  dataLoader.py  mm_utils.py  utils.py
EEG_Encoder/: Readme.md  __init__.py  run_CLIPtraining.py
EEG_Encoder/Config/: __init__.py  hydra_configs.py  training_config.py
EEG_Encoder/Model/: AutoCorrelation.py  CommonBlock.py  Crossformer_EncDec.py  ETSformer_EncDec.py  Embed.py  MultiWaveletCorrelation.py  baseModel.py  cbramod.py
EEG_Encoder/Model/CSBrain/: CSBrain.py  CSBrain_Encoder.py  CSBrain_transformer.py  CSBrain_transformerlayer.py  __init__.py
EEG_Encoder/Tools/: Utils.py  baseDataset.py  dataBuilder.py  lightingModule.py  logger_utils.py  loss.py
EEG_Encoder/examples/: base.yaml  eval_sd.yaml  eval_si.yaml  train_atms.yaml  train_classifier.yaml  train_classifier_only.yaml
data/: README.md  Utils.py  __init__.py  create_dataset_pkl.py  preUtils.py  preprocess_wavemind.py  preprocess_wavemind_dataset.sh
data/ImageNetEEG/: download.py  image_class.txt  process.py
data/SEED/: process.py
data/THING-EEG/: process.py
data/TUAB/: process.py
data/TUEV/: download.py  process.py
data/Total/: showHDF5States.ipynb  test_hdf5.py
(+33 files in other folders)
