[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WaveMind"
version = "0.1"
dependencies = [
    "rouge_score",
    "transformers>=4.49",
    "protobuf>=6.0",
    "torcheeg",
    "torch==2.8.0",
    "torchaudio",
    "numpy<2.0.0",
    "pandas",
    "scipy",
    "lightning",
    "braindecode",
    "protobuf",
    "matplotlib_inline",
    "jupyter",
    "reformer_pytorch",
    "comet-ml",
    "swanlab",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0"
]

[tool.setuptools]
packages = ["EEG_Encoder", "Data_Engineering", "EEGLLM","data"]