[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WaveMind"
version = "0.1"
requires-python = ">=3.11"
dependencies = [
    "rouge_score",
    "transformers>=4.49",
    "protobuf>=6.0",
    "torch==2.8.0",
    "torchaudio",
    "numpy<2.0.0",
    "pandas",
    "scipy",
    "lightning",
    "braindecode",
    "matplotlib_inline",
    "jupyter",
    "reformer_pytorch",
    "comet-ml",
    "swanlab",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "torcheeg",
    "llava",
]

[tool.setuptools]
packages = ["EEG_Encoder", "Data_Engineering", "EEGLLM", "data"]

[tool.uv.sources]
"llava" = { path = "EEGLLM/LLaVA" }